# doodles

./: .editorconfig  Cargo.toml  License.txt  Readme.md
src/: common.rs  lib.rs
src/bubble/: main.rs  renderer.rs
src/common/: borders.rs  dir.rs  term.rs
src/conway/: board.rs  main.rs  renderer.rs  term_renderer.rs
src/digirain/: alphabet.txt  board.rs  droplets.txt  main.rs
src/maze/: agent.rs  main.rs  maze.rs
